--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
   	<title>Snake Game</title>
     <link rel="stylesheet" href="styles.css">
-
+    <link rel="shortcut icon" href="dx logo reveal.png" type="image/x-icon">
   </head>
 
   <body bgcolor="#2F4F4F">
